--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!-- Monthly Line -->
     <section class="card">
-      <h2>Monthly Inflation Rate (MoM)</h2>
+      <h2>Monthly Inflation Rate (Month-over-Month)</h2>
       <div class="controls">
         <label>Time range (months): <input id="monthly-range" type="range" min="6" max="130" value="36" /></label>
         <span id="monthly-range-value"></span>
@@ -67,3 +67,4 @@
   <script src="app.js" defer></script>
 </body>
 </html>
+
